# jgphpc

./: .gitignore  .gitmodules  README.md
audio/: 2mp3.sh  parec_sox.sh  readme.jg  readme.recordsound  readme.son  record.sh
bash/: TODO  VISU  Xdefaults  bash_aliases  bash_profile_mac  bashrc  ctags  escha.sh  forward  inputrc  kesch.sh  plan  profile  tcshrc  terminator.sh
bash/colors/: bash_colors
bash/debug/: bashrc  profile
bash/linux/: sysvbanner.c
bash/readmes/: readme.google  readme.imagemagick  readme.linux  readme.moodle  readme.swap  sed.sh
bash/terminal/: AULT  DAINT  DOM  EIGER  ELA  PILATUS  PP  PP.ault  PP.daint  PP.dom  PP.eiger  PP.pilatus  PP.tsa  RR  RR.ault  RR.daint  RR.dom  RR.eiger  RR.pilatus  RR.tsa  TSA  VV  VV.ault  VV.daint  VV.dom  VV.eiger  VV.pilatus  VV.tsa  readme
cmake/: CMakeLists.txt
cmake/src/: hello_world_mpi.c  hello_world_mpi.cpp  hello_world_mpi.f90  hello_world_serial.cpp  hello_world_serial.f90
crontab/: email.conf  mail.sh
crontab/events/: cscs.sh  ddt.sh  eff_hpcwire.html  eff_hpcwire.old  ethz.sh  hpcwire.sh  ncsa.sh  olcf.sh  prace.sh
crontab/muttjg/: clean.sh
crontab/scuola/: gravesano.sh
crontab/ski/: ski.sh
crontab/xalt/: xaltdb.sh
ddt/elastic_kibana_graylog/: readme
docs/: .gitignore  Makefile  about.rst  conf.py  index.rst
docs/rst/: conf.py  index.rst  readme.jg  reference.rst  started.rst
docs/sphinx/: 0  conf.py  index.rst
easybuild/: dom-gpu.sh  dom-mc.sh  mac-jg.sh  setup_nersc.sh
git/: git_compare.sh  git_diff_wrapper  gitconfig  gitignore
hpc/: min_max_avg.sh  sacc.sh  speedup.py  speedup.sh
hpc/benchmarking/: readme  top.sh  vmstatjg.sh
hpc/c++/: compilers_jg.cpp  readme  types.cpp
hpc/caliper/: math.ods
hpc/containers/: Dockerfile  requirements.txt
hpc/cpu/: affinity  cpufreq_boost.sh  cpufreq_governor.sh  cycle.h  mycpu  readme.dgemm
hpc/craypat/: coeffvar.sh  coeffvar_mpionly.sh  hbm.F90  hbm.F90.rpt  perflite64_report_summary.sh  perflite65_report_summary.sh  top_mpi2.sh  top_mpi_ptl702.sh  top_mpi_todo.sh
hpc/debug/: _gdbinit_  gdbinitJG  readme  stl-views-1.0.3.gdb
hpc/extrae/: readme.pypop
hpc/fortran/: makefile
hpc/gpu/: g2g-png.sh  gpumap.mklein  gpumapjg.sh  nvprof_cpu.sh  nvprof_mps.sh  shoc.ornl
hpc/interconnect/: egroups.sh  hugepages.ods
hpc/jira/: create_issue.sh  search_issues.py
hpc/kanboard/: 0.py  plot_jg.ipynb  readme
hpc/likwid/: readme
hpc/nersc/: readme.__cori__
hpc/roofline/: config.dommc+advisor_step1+2_1flops.intel  config.dommc+advisor_step1+2_32flops.intel  config.dommc+advisor_step1+2_512flops.intel  config.dommc.cce  config.dommc.gnu  config.dommc.intel  config.dommc.pgi  readme
hpc/spack/: readme
html/: readme.jg
html/kanban/: readme.jg
html/onmouse/: index.html
html/reveal_js/: cscs.html
latex/: readme
latex/cscs_courses/: course.tex  in  readme.jg
latex/gif/: readme
latex/math/: readme
module/: TODO  cmdModule.c  load_latest_mfiles.sh  modulespath
modulefiles/nvidia/: 7.0.18
modulefiles/scorep/: 1.4
modulefiles/visit/: 2.8
monitoring/: readme
monitoring/inflow/: convert_timestamp.sh  g2g.sh  pyregression_daint2influx.py  xaltdbsize2influx.sh
monitoring/kibana/: elastic.py  known_vs_unknown_from_kibana.sh
mutt/: gnome-terminal.sh  mailcap.  muttrc  readme.jg
mutt/1.5.24/: 0.c  curs_main.c  functions.h  pattern.c  protos.h
nvim/: init.vim
office/: gantt_chart.ods  gantt_chart2.ods
paraview/: readme.sph
paraview/daint/: rc-submit-pvserver.sh  servers.pvsc
paraview/dom/: rc-submit-pvserver_fordom.sh  readme.jg  server_dom_forlaptop.pvsc  sphflow_readh5.py
paraview/dora/: 0.sh  servers_dora.pvsc
paraview/pilatus/: 0.sh  bug0.sh  paraview  servers.pvsc
php/: ._client_secret.json  0  client_secret.json  credentials.json  readme  scs.php
php/KEEP/: client_secret.json  credentials.json
preferences/: tmux.conf
python/: 0.py  _readme_jg_python.sh  bars3d_demo.py  contour_demo.py.ipynb  factorial.py  gitlab.py  idle.sh  io.py  lilly.py  mpi.py  otf2.py
python/basic/: io.py  (+3 more)
slurm/: 256cores.sh  2hours.sh  2seconds.sh  cnh.sh  cpumask.expect  cpumask.sh  date2epoch.sh  elapsed.sh  flush_cache.sh  hexa_binary_decimal_converter.py  hexa_binary_decimal_converter.sh  ht.sh  id.sh  job_start_end.sh  lstopo.sh  nodelist.sh  nogreasy.slm  over.slurm  run.sh  sbatch.sh  scn2jobid.sh  scontrol-show-freememory.sh  scontrol-show-nodes.sh  sinfojg.sh  state.sh
ssh/: config  readme.ifconfig
video/: dvdrip.readme  readme.dvd  readme.freetv  readme.graver  readme.jg  readme.makemovie  readme.mplayer  readme.mplayer2  readme.screenrecord  readme.xorg
vim/: vimrc
vnc/: turbovnc-client.sh  turbovnc-server-leone33.sh  turbovnc-server.sh  xstartup
(+428 files in other folders)
